Fixed alignment between icon and text

--- a/search-and-facets/searchpage/standard/style.css
+++ b/search-and-facets/searchpage/standard/style.css
@@ -40,6 +40,7 @@
 		padding: 1rem;
 		width: fit-content;
 		float: right;
+    align-items: center;
 	}
 
 	.clerk_header_wrapper > * {
